--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,6 +5,10 @@
     <string name="month_in">本月收入</string>
     <string name="budget">预算剩余</string>
     <string name="see_chart">查看表格</string>
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="add_remark">添加备注</string>
+    <string name="remark">备注</string>
+    <string name="ensure">确定</string>
+    <string name="cancel">取消</string>
+    <string name="please_input_time">请输入时间（24小时制）</string>
+
 </resources>
