--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,7 +3,7 @@
     <string name="editone">记帐</string>
     <string name="month_out">本月支出</string>
     <string name="month_in">本月收入</string>
-    <string name="budget">预算剩余</string>
+    <string name="total">净资产</string>
     <string name="see_chart">查看表格</string>
     <string name="add_remark">添加备注</string>
     <string name="remark">备注</string>
