--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">小账本</string>
-    <string name="editone">记帐</string>
+    <string name="editone">记个小帐</string>
     <string name="month_out">本月支出</string>
     <string name="month_in">本月收入</string>
     <string name="total">净资产</string>
@@ -10,5 +10,10 @@
     <string name="ensure">确定</string>
     <string name="cancel">取消</string>
     <string name="please_input_time">请输入时间（24小时制）</string>
+    <string name="about">关于</string>
+    <string name="setting">设置</string>
+    <string name="history_record">账单记录</string>
+    <string name="account_info">账单详情</string>
+    <string name="history_info">本月账单记录</string>
 
 </resources>
